iOS overflow fix

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ html {
 body {
   min-height: 100vh;
   min-width: 100vw;
-  overflow: auto;
+  overflow: scroll;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
